<resources>
    <string name="app_name">UltraKernel</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main" translatable="false">@string/app_name</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="onboot">Apply On Boot</string>

    <string name="notif_onboot_title">Applying OnBoot Preferences !</string>
    <string name="notif_onboot_complete">Applying complete</string>

    <string name="priv_title">Please wait</string>
    <string name="priv_msg">Requesting root privilege...</string>

    <string name="onlyone_hotplug">Check Only One Hotplug .. Disabling other Hotplugs</string>

    <!-- Menu Titles -->
    <string name="info_title">Device Information</string>
    <string name="k_cpu_title">CPU Kernel Features</string>

    <!-- Info sections -->
    <string name="sys_info">System Information</string>
    <string name="bat_info">Battery Status</string>
    <string name="kernel_info">Kernel Information</string>
    <string name="proc_info">Processor Information</string>
    <string name="KernelInfo">Kernel Information</string>
    <string name="SocInfo">Processor Information</string>

    <!-- Kernel CPU Features Section -->
    <string name="k_cpu_gov">CPU Governors</string>

    <!-- System Info -->
    <string name="sys_info_title">System Version</string>
    <string name="sys_code_name">Android Code Name</string>
    <string name="sys_version">Android Version</string>
    <string name="sys_sdk">SDK Version</string>
    <string name="sys_sec_patch">Security Patch</string>
    <string name="sys_device_name">Device Name</string>
    <string name="sys_device_soc">Device SOC</string>
    <string name="sys_device_manuf">Device Manufacturer</string>
    <string name="sys_bootloader" translatable="false">Bootloader</string>
    <string name="sys_cpu_abi" translatable="false">CPU ABI</string>
    <string name="sys_baseband">Baseband Version</string>
    <string name="sys_k_version">Kernel Version</string>
    <string name="sys_selinux" translatable="false">SElinux</string>
    <string name="sys_selinux_enforcing">Enforcing</string>
    <string name="sys_selinux_permissive">Permissive</string>
    <string name="sys_selinux_off">Off</string>
    <string name="sys_root">Root Status</string>

    <!-- Glyph to be overlaid atop the battery when the level is extremely low. Do not translate. -->
    <string name="battery_meter_very_low_overlay_symbol" translatable="false">!</string>
    <string name="perc_0" translatable="false">0%</string>

    <!-- Battery Info Titles -->
    <string name="battery_health">Health</string>
    <string name="battery_plugged">Plugged</string>
    <string name="battery_status">Status</string>
    <string name="battery_technology">Technology</string>
    <string name="battery_temp">Temperature</string>
    <string name="battery_voltage">Voltage</string>
    <string name="battery_capacity">Capacity</string>

    <!-- Battery Health -->
    <string name="battery_health_cold">Cold</string>
    <string name="battery_health_dead">Dead</string>
    <string name="battery_health_good">Good</string>
    <string name="battery_health_over_voltage">Over-Voltage</string>
    <string name="battery_health_overheat">Over-Heat</string>
    <string name="battery_health_unspecified_failure">Unspecified failure</string>
    <string name="battery_plugged_none" translatable="false"></string>
    <string name="battery_plugged_wireless">Wireless Charger</string>
    <string name="battery_plugged_usb">USB Charger</string>
    <string name="battery_plugged_ac">AC Charger</string>
    <string name="battery_status_discharging">Not Charging</string>
    <string name="battery_status_charging">Charging</string>
    <string name="battery_status_full">Full</string>

    <!-- Processor Cores in Words -->
    <string name="dual_core">DualCore</string>
    <string name="quad_core">QuadCore</string>
    <string name="hexa_core">HexaCore</string>
    <string name="octa_core">OctaCore</string>
    <string name="deca_core">DecaCore</string>

    <!-- Processor Info Titles -->
    <string name="soc_n_cores">Number of cores</string>
    <string name="soc_api" translatable="false">CPU ABI</string>
    <string name="soc_manuf">CPU Manufacturer</string>

    <!-- CPU GOV -->
    <string name="cpu_max_freq">CPU Frequently</string>
    <string name="k_change_gov">Change</string>
    <string name="k_cpu_freq">Frequently Table</string>
    <string name="gathering_cpu_information">Gathering CPU information…</string>
    <string name="cpu_info_speed_current">Current speed</string>
    <string name="cpu_info_speed_max">Maximum speed</string>
    <string name="cpu_info_speed_min">Minimum speed</string>

    <!-- Kernel Info Titles -->
    <string name="kernel_version">Kernel Version</string>
    <string name="kernel_gcc">Kernel GCC</string>
    <string name="kernel_c_gov">Current Governor</string>

    <!-- HotPlugs -->
    <string name="cpu_hotplugs" translatable="false">CPU HotPlugs</string>
    <string name="cpu_hotplug_mpd" translatable="false">MSM MPDecision</string>
    <string name="cpu_hotplug_mpd_summary">Replacement for Qualcomm MPD hotplug developed by show-p-1984</string>
    <string name="cpu_hotplug_msm" translatable="false">MSM HotPlug</string>
    <string name="cpu_hotplug_msm_summary">Replacement for Qualcomm MPD hotplug developed by myfluxi</string>
    <string name="cpu_hotplug_alucard" translatable="false">Alucard HotPlug</string>
    <string name="cpu_hotplug_alucard_summary">Replacement for Qualcomm MPD hotplug developed by Alucard</string>
    <string name="cpu_hotplug_autosmp" translatable="false">AutoSmp HotPlug</string>
    <string name="cpu_hotplug_autosmp_summary">Replacement for Qualcomm MPD hotplug developed by mrg666</string>
    <string name="min_cpu_online">Minimum CPU online</string>
    <string name="max_cpu_online">Maximum CPU online</string>
    <string name="suspend_title">Suspend</string>
</resources>
